Update example and documentation:

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 <body>
     <p>Check the Developer Console</p>
     <script>
-        // Example TCString decoder usage
-
+        // Example TCString decoder usage.
+        
         let encodedTCString = "CPpBrIAPpBrIAADAOBENC8CsAP_AAH7AAAAAF5wDwAAgAQAAqABwAFoAUAAwgBuAGQAQYAm4BTQDlAJ0AXmBecA0AAIAEAAKgAcABaAFAAMIAyACbgFNAOUAnQBeYAA.fkAAAAAAAAA";
-
         let decodedTCModel;
         let consentObject;
 
